test: increase unit test coverage for frontend dashboard and backend transactions